# nightcrawler

./: .gitignore  README.md  docker-compose.yml  manifest.json  tailwind.config.js
api/: .env.example  justfile  pyproject.toml
api/data/extracted/: enduin.json  fintech.json  hacker_house.json  platform_engineer.json  product_builder.json  software_engineer.json
api/data/jobs/: enduin.txt  fintech.txt  hacker_house.txt  platform_engineer.txt  product_builder.txt  software_engineer.txt
api/src/: cv_index.py  cv_properties_transformer.py  logger.py  main.py  main_old.py  settings.py
api/src/flows/: simple_extractor.py
api/src/flows/job_extractor/: simple_extract_properties.py  simple_heavy_constraints_extractor.py  simple_roles_extractor.py  simple_tools_tech_extractor.py
api/src/flows/job_extractor/roles_extractor/: events.py  prompt.py  validator.py  workflow.py
api/src/utils/: cache.py  retry.py  text_cleaner.py
chrome-extension/: package.json  tsconfig.json  webpack.config.js
chrome-extension/src/utils/ai/: base.ts  llm-caller.ts
chrome-extension/src/utils/ai/components/: job-matcher.ts  preference-optimizer.ts
chrome-extension/src/utils/ai/prompts/: job-matcher.ts  optimizers.ts
src/: background.tsx  matcher.tsx
src/components/match-button/: match-button.tsx
src/components/settings/: settings.html  settings.tsx
src/styles/: main.css
src/utils/ai/: openai.ts
src/utils/storage/: storage.ts  types.ts
