[project]
name = "nightcrawler-api"
version = "0.1.0"
description = ""
authors = [{ name = "Mavin", email = "vincenzo.marragony@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "just (>=0.8.165,<0.9.0)",
    "ruff (>=0.12.8,<0.13.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "watchfiles (>=1.1.0,<2.0.0)",
    "arize-phoenix (>=11.21.1,<12.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "llama-index (>=0.13.1,<0.14.0)",
    "llama-index-llms-groq (>=0.4.0,<0.5.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "llama-index-callbacks-arize-phoenix (>=0.6.0,<0.7.0)",
    "debugpy (>=1.8.16,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
